Fix - todoOption / priorityTodoOption for better component display on small devices

--- a/src/components/UI/CreateCategoryPopup/createCategoryPopup.module.scss
+++ b/src/components/UI/CreateCategoryPopup/createCategoryPopup.module.scss
@@ -25,5 +25,14 @@
     border-radius: $border-rounded-md;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.247);
   }
+
+  
+@media screen and (max-width: 1100px) {
+
+.popupContainer{
+  left: 4rem;
+}
+
+}
   
   
