--- a/src/components/UI/PriorityTodoOption/priorityTodoOption.module.scss
+++ b/src/components/UI/PriorityTodoOption/priorityTodoOption.module.scss
@@ -35,10 +35,17 @@
   color: $low-priority-color;
 }
 
-.medium_priority {    
+.medium_priority {
   color: $medium-priority-color;
 }
 
 .high_priority {
   color: $high-priority-color;
+}
+
+@media screen and (max-width: 1100px) {
+  .popupContainer{
+    right: 1rem!important;
+    left: auto!important;
+  }
 }
