--- a/src/components/UI/TodoOptions/todoOptions.module.scss
+++ b/src/components/UI/TodoOptions/todoOptions.module.scss
@@ -30,3 +30,11 @@
 .todoOption_item:hover {
   background-color: $background-color-hover;
 }
+
+
+@media screen and (max-width: 1100px) {
+  .popupContainer{
+    right: 1rem!important;
+    left: auto!important;
+  }
+}
